test/classes/errors/nilability-init-var/init-var-oknil-shared-from-oknil-unmanaged.good
init-var-oknil-shared-from-oknil-unmanaged.chpl:9: error: invalid copy-initialization
init-var-oknil-shared-from-oknil-unmanaged.chpl:9: error: cannot create a shared variable from an unmanaged class instance
